# rrun

./: Cargo.toml  README.md  build_macos.sh  procfile
.github/workflows/: release.yml
examples/echo/: Cargo.toml  main.rs  rman.config.yml
scripts/: build.sh  osx_setup.sh
src/: config.rs  log.rs  main.rs
test/fixtures/: config.json  config.yml  ls_procfile  procfile
tests/: integration.rs
tests/fixtures/: config.yml
