[package]
name = "rrun"
version = "0.0.0"
edition = "2021"

[[example]]
name = "echo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "4.3.10"
env_logger = "0.10.0"
log = "0.4.19"
regex = "1.8.4"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "full"] }
